2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:

	Remove the "foo" color.

2007-03-04  Thomas Wood  <thos@gnome.org>

	Patch by: Werner Pantke <gnome-color-chooser@punk-ass-bitch.org>

	* .cvsignore:
	* schema/*:
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* po/*:

	Patch from Werner Pantke to add xml descriptions of engine options.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Makefile.am:
	List subdirectories in DIST_SUBDIRS.

2007-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/crux/src/crux-draw.c: (draw_box):
	* engines/industrial/src/parse_rc_style.h:
	* engines/support/cairo-support.c:
	* test/Makefile.am:
	* test/torturetest.c:

	- Make gtk-engines compile with --enable-paranoia set.
	- Don't use the development cflags for the torture test. The string
	constants are too long and gcc complains.

	* engines/glide/src/glide_gtk2_support.c:

	Fixed some typos. A wrong variable was used in some comparisons and
	the result could never be true.

2007-02-26  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Update for 2.9.4 release

2007-02-26  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_checkbox): Revert the checkbox mark style from a tick to a
	cross

2007-02-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/mist/src/mist-rc-style.c: (mist_rc_style_parse):
	* engines/thinice/src/thinice_rc_style.c: (thinice_rc_style_parse):
	- Use quarks with the engines name in them.
	- Don't free thinice's RC style on parse failure. GTK+ will
	take care of that. (Thanks to Werner Pantke for reporting)

2007-02-20  Benjamin Berg  <benjamin@sipsolutions.net>
