@@ -1,15 +1,0 @@
-2007-03-04  Thomas Wood  <thos@gnome.org>
-
-	reviewed by: <delete if not using a buddy>
-
-	* Makefile.am:
-	* clearlooks.xml.in.in:
-	* crux.xml.in.in:
-	* glide.xml.in.in:
-	* hc.xml.in.in:
-	* industrial.xml.in.in:
-	* mist.xml.in.in:
-	* redmond.xml.in.in:
-	* smooth.xml.in.in:
-	* thinice.xml.in.in:
-
