@@ -1,5 +1,13 @@
 2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>
 
+	* schema/Makefile.am:
+	List *.xml.in.in in EXTRA_DIST, so that make dist is also possible
+	if an engine is disabled.
+
+	Also removed the ChangeLog from the schema directory.
+
+2007-03-05  Benjamin Berg  <benjamin@sipsolutions.net>
+
 	* themes/Clearlooks/gtk-2.0/gtkrc:
 
 	Remove the "foo" color.
